--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
     <!-- <link href="/node_modules/material-design-icons-iconfont/dist/material-design-icons.css" rel="stylesheet"> -->
-    <link href="/node_modules/material-design-icons/iconfont/material-icons.css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
+    <!-- <link href="/node_modules/material-design-icons/iconfont/material-icons.css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"> -->
     <link href="/node_modules/vuetify/dist/vuetify.min.css" rel="stylesheet">
     <link href="/node_modules/vue-d3-network/dist/vue-d3-network.css" rel="stylesheet">
     <link href="/node_modules/chart.js/dist/Chart.min.css" rel="stylesheet">
